--- a/lib/escaperoom_web/live/item_live/index.html.heex
+++ b/lib/escaperoom_web/live/item_live/index.html.heex
@@ -3,35 +3,70 @@
 
   <div class = "column column-20">
 
-    <table>
-    <thead>
-      <tr>
-        <th>Inventory</th>
-        <!--<th>Description</th>-->
-        <th></th>
-      </tr>
-    </thead>
-    <tbody id="items">
-      <%= for item <- @items do %>
-        <tr id={"item-#{item.id}"}>
-          <td><img src="/images/Letter.png" hidden="hidden"></td>
-          <!--<td><%= item.description %></td>-->
-<!--
-          <td>
-            <span><%= live_redirect "Show", to: Routes.item_show_path(@socket, :show, item) %></span>
-            <span><%= live_patch "Edit", to: Routes.item_index_path(@socket, :edit, item) %></span>
-            <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: item.id, data: [confirm: "Are you sure?"] %></span>
-          </td>
--->
-        </tr>
-      <% end %>
-    </tbody>
-    </table>
+    <h3>Inventory</h3>
+
+    <div>
+    <input class="inventory" type="image" src="/images/Key.png" id= "inv_key" hidden="hidden"/>
+    </div>
+
+    <div>
+    <input class="inventory" type="image" src="/images/Letter open.png" />
+    </div>
+
   </div>
 
-  <div class = "column column 80">
-    <p>Game</p>
-    <span><%= live_patch "Key", to: Routes.item_index_path(@socket, :new) %></span>
+  <div class = "column column-80 gamebody">
+    <!-- <span><%= live_patch "Key", to: Routes.item_index_path(@socket, :new) %></span> -->
+
+    <input class="buttons furniture sock" type="image" src="/images/Sock.png" /> <!-- show in inventory -->
+    <input class="buttons furniture undies" type="image" src="/images/Underwear.png" /> <!-- show in inventory -->
+    <img class = "furniture sofa" src="/images/Sofa.png">
+    <img class = "furniture table" src="/images/Table.png">
+    <img class = "furniture chess" src="/images/Chessboard.png">
+
+    <img class = "furniture chair" src="/images/DeskChair.png" id="chair">
+    <input class="buttons furniture paper" type="image" src="/images/Newspaper.png" /> <!-- show big and in inventory -->
+    <input class="buttons furniture letter" type="image" src="/images/Letter.png" /> <!-- show big/open version and in closed version in inventory -->
+    <input class="buttons furniture desk" type="image" src="/images/Desk.png" id="desk" onclick="openDesk();" /> <!-- replace with open desk picture at click and add key + pencil inside-->
+    <input class="buttons furniture key" type="image" src="/images/Key.png" id= "key" onclick="get(id, 'inv_key');" hidden="hidden" />
+    <input class="buttons furniture pen" type="image" src="/images/Pen.png" id= "pen" onclick="get(id);" hidden="hidden" />
+
+    <script>
+      function openDesk() {
+        var desk = document.getElementById("desk");
+        desk.src = "/images/DeskOpen.png";
+        document.getElementById("key").removeAttribute("hidden");
+        document.getElementById("pen").removeAttribute("hidden");
+      }
+    </script>
+
+    <script>
+      function get(objectId, inv_Id) {
+        var object = document.getElementById(objectId);
+        object.hidden = "hidden"
+        document.getElementById(inv_Id).removeAttribute("hidden")
+
+        /*
+        set found(id) to true
+        notify(id)
+        */
+      }
+    </script>
+
+    <input class = "buttons furniture laptop" type="image" src="/images/Computer.png" /> <!-- show open laptop -->
+
+    <input class = "buttons furniture closet" type="image" src="/images/Closet.png"> <!-- show open closet -->
+    <input class = "buttons furniture door" type="image" src="/images/Door.png"> <!-- if key==true finish game -->
+
+    <!--
+    <button id="key">Key</button>
+    <script>
+    const key = document.getElementById("key");
+    key.addEventListener("click", function key);
+    function key() {
+      document.getElementById("image_key").removeAttribute("hidden");
+    }
+    </script> -->
   </div>
 
 </section>
