--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -789,7 +789,7 @@ header nav a {
   position: relative;
   color: #ff9e7d;
   /*background-color: brown*/
-  background-image: linear-gradient(#02578E, #352a55);
+  background-image: linear-gradient(#02578E, #352a55 60%);
   background-size: cover;
   background-attachment: fixed;
 }
