--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -887,8 +887,8 @@ header nav a {
 }
 
 .furniture.undies {
-  left: 15%;
-  top: 34%;
+  left: 11%;
+  top: 47%;
   width: 5%;
 }
 
@@ -898,3 +898,67 @@ header nav a {
   max-height: 45%;
   rotate: 45deg;
 }
+
+.window {
+  display: none;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1001;
+  background-size: cover;  
+}
+
+.close {
+  position: absolute;
+  color: #FFD080;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  right: 2%;
+  top: 2%;
+}
+
+.window.laptop {
+  background-image: radial-gradient(ellipse at bottom, #01cbcf
+  , #0188a5, #3e3264), 
+    linear-gradient(to right, #F8F0F0, #FFD080);
+    background-repeat: no-repeat, no-repeat;
+  background-position: top, bottom;
+  background-size: 100% 65%, 100% 35%;
+}
+
+.laptopOpen {
+  position: absolute;
+  bottom: 15%;
+  width: 65%;
+  margin-left: 20%;
+}
+
+.window.closet {
+  background-image: linear-gradient(#0188a5, #3e3264);
+  background-repeat: no-repeat;
+}
+
+.closetOpen {
+  position: absolute;
+  bottom: 0;
+  width: 90%;
+  margin-left: 5%;
+}
+
+.safe {
+  position: absolute;
+  width: 20%;
+  bottom: 18%;
+  margin-left: 30%;
+}
+
+.books {
+  position: absolute;
+  width: 20%;
+  bottom: 18%;
+  margin-left: 50%;
+}
+
