present zoomed in object at click

--- a/lib/escaperoom_web/live/item_live/index.html.heex
+++ b/lib/escaperoom_web/live/item_live/index.html.heex
@@ -87,8 +87,38 @@
       <img class="books" src="/images/Books.png">
     </div>
 
+<!-- Zoom Objects -->
+    <div class="window" id="zoomKey">
+      <span class="close" onclick="closeScreen('zoomKey');"> &times </span>
+      <img class="zoom" src="/images/Key.png">
+    </div>
 
+    <div class="window" id="zoomLetter">
+      <span class="close" onclick="closeScreen('zoomLetter');"> &times </span>
+      <img class="zoom" src="/images/Letter open.png">
+    </div>
 
+    <div class="window" id="zoomPaper">
+      <span class="close" onclick="closeScreen('zoomPaper');"> &times </span>
+      <img class="zoom" src="/images/Newspaper.png">
+    </div>
+
+    <div class="window" id="zoomSock">
+      <span class="close" onclick="closeScreen('zoomSock');"> &times </span>
+      <img class="zoom" src="/images/Sock.png">
+    </div>
+
+    <div class="window" id="zoomUndies">
+      <span class="close" onclick="closeScreen('zoomUndies');"> &times </span>
+      <img class="zoom" src="/images/Underwear.png">
+    </div>
+
+    <div class="window" id="zoomPen">
+      <span class="close" onclick="closeScreen('zoomPen');"> &times </span>
+      <img class="zoom" src="/images/Pen.png">
+    </div>
+
+  <!-- modals -->
     <script>
       function showScreen(Id) {
         var modal = document.getElementById(Id);
