--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -825,7 +825,7 @@ header nav a {
 }
 
 .furniture.pen {
-  top: 19% ;
+  top: 20% ;
   right: 28%;
   width: 3%;
   rotate: 70deg;
@@ -920,6 +920,12 @@ header nav a {
   top: 2%;
 }
 
+.close:hover,
+.close:focus {
+  color: #ff9e7d;
+  cursor: pointer;
+}
+
 .window.laptop {
   background-image: radial-gradient(ellipse at bottom, #01cbcf
   , #0188a5, #3e3264), 
@@ -962,3 +968,11 @@ header nav a {
   margin-left: 50%;
 }
 
+.zoom {
+  display: block;
+  margin-top: 3%;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 90%;
+  max-width: 90%;
+}
