--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -24,7 +24,7 @@ body {
   font-weight: 300;
   letter-spacing: .01em;
   line-height: 1.6;
-  background-image: linear-gradient(#352a55 20%, #02578E );
+  background-image: linear-gradient(#352a55 20%, #02578E);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -785,7 +785,7 @@ header nav a {
   }
 }
 
-.row .column.column-80.gamebody { 
+.row .column.column-80.gamebody {
   position: relative;
   color: #ff9e7d;
   /*background-color: brown*/
@@ -818,14 +818,14 @@ header nav a {
 }
 
 .furniture.key {
-  top: 22% ;
+  top: 22%;
   right: 25%;
   width: 3%;
   rotate: 50deg;
 }
 
 .furniture.pen {
-  top: 20% ;
+  top: 20%;
   right: 28%;
   width: 3%;
   rotate: 70deg;
@@ -907,7 +907,7 @@ header nav a {
   right: 0;
   top: 0;
   z-index: 1001;
-  background-size: cover;  
+  background-size: cover;
 }
 
 .close {
@@ -927,10 +927,9 @@ header nav a {
 }
 
 .window.laptop {
-  background-image: radial-gradient(ellipse at bottom, #01cbcf
-  , #0188a5, #3e3264), 
+  background-image: radial-gradient(ellipse at bottom, #01cbcf, #0188a5, #3e3264),
     linear-gradient(to right, #F8F0F0, #FFD080);
-    background-repeat: no-repeat, no-repeat;
+  background-repeat: no-repeat, no-repeat;
   background-position: top, bottom;
   background-size: 100% 65%, 100% 35%;
 }
@@ -975,4 +974,9 @@ header nav a {
   margin-right: auto;
   max-height: 90%;
   max-width: 90%;
+}
+
+.window.victory {
+  background-image: linear-gradient(#0188a5, #3e3264);
+  background-repeat: no-repeat;
 }
