--- a/lib/escaperoom_web/live/item_live/index.html.heex
+++ b/lib/escaperoom_web/live/item_live/index.html.heex
@@ -68,15 +68,52 @@
       }
     </script>
 
-    <input class = "buttons furniture door" type="image" src="/images/Door.png"> <!-- if key==true finish game -->
+
+    <!-- Button disable function -->
+    <script>
+
+    function enable(Id) {
+      document.getElementById(Id).removeAttribute("disabled");
+    }
+
+    </script>
+
+    <input class = "buttons furniture door" type="image" src="/images/Door.png" id="door" onclick = "showScreen('vicscreen');" disabled> <!-- if key==true finish game -->
 
 <!-- Laptop -->
     <input class = "buttons furniture laptop" type="image" src="/images/Computer.png" onclick="showScreen('laptopScreen');"/> <!-- show open laptop -->
     <div class="window laptop" id="laptopScreen">
       <span class="close" onclick="closeScreen('laptopScreen');"> &times </span>
       <img class="laptopOpen" src="/images/LaptopScreen.png">
-    </div>
 
+      <!--
+      <div>
+      <input type="number" id="code_1" name="code_1" min="0" max="9">
+      <input type="number" id="code_2" name="code_1" min="0" max="9">
+      <input type="number" id="code_3" name="code_1" min="0" max="9">
+      <input type="number" id="code_4" name="code_1" min="0" max="9">
+
+      <input type="button" id="code_enter" onclick=codecheck()>
+      </div>
+      -->
+
+    </div>
+<!--
+    <script>
+    function codecheck(){}
+      let input1 = document.getElementById("code_1")
+      let input1 = document.getElementById("code_2")
+      let input1 = document.getElementById("code_3")
+      let input1 = document.getElementById("code_4")
+
+
+      let value = input.value
+      let value = input.value
+      let value = input.value
+      let value = input.value
+    }
+    </script>
+-->
 
 <!-- Closet -->
     <input class = "buttons furniture closet" type="image" src="/images/Closet.png" onclick="showScreen('closetScreen');"> <!-- show open closet -->
@@ -86,7 +123,10 @@
       <img class="safe" src="/images/Safe.png">
       <img class="books" src="/images/Books.png">
     </div>
-
+<!-- Victory screen -->
+    <div class="window victory" id="vicscreen">
+      <p>Wooooo Victory</p>
+    </div>
 <!-- Zoom Objects -->
     <div class="window" id="zoomKey">
       <span class="close" onclick="closeScreen('zoomKey');"> &times </span>
