HTML Logic done. Missing: Open Safe img, Victory screen img, key needs to be in safe

--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -960,6 +960,14 @@ header nav a {
   margin-left: 30%;
 }
 
+.safeOpen {
+  position: absolute;
+  width: 20%;
+  bottom: 18%;
+  margin-left: 30%;
+}
+
+
 .books {
   position: absolute;
   width: 20%;
