--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -12,6 +12,8 @@
   box-sizing: inherit
 }
 
+@font-face{font-family:post no bills colombo;font-style:normal;font-weight:400;src:local('Post No Bills Colombo'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Regular.woff) format('woff')}@font-face{font-family:post no bills colombo;font-style:normal;font-weight:700;src:local('Post No Bills Colombo'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Bold.woff) format('woff')}@font-face{font-family:post no bills colombo light;font-style:normal;font-weight:300;src:local('Post No Bills Colombo Light'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Light.woff) format('woff')}@font-face{font-family:post no bills colombo medium;font-style:normal;font-weight:500;src:local('Post No Bills Colombo Medium'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Medium.woff) format('woff')}@font-face{font-family:post no bills colombo semibold;font-style:normal;font-weight:600;src:local('Post No Bills Colombo SemiBold'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-SemiBold.woff) format('woff')}@font-face{font-family:post no bills colombo extrabold;font-style:normal;font-weight:800;src:local('Post No Bills Colombo ExtraBold'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-ExtraBold.woff) format('woff')}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%
@@ -46,12 +48,14 @@ button,
 input[type='button'],
 input[type='reset'],
 input[type='submit'] {
-  border: 0.1rem solid #0069d9;
+  border: 0.1rem solid #352a55;
+  color: #FFFAF2;
   border-radius: .4rem;
-  color: #fff;
+  background-color: transparent;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.1rem;
+  font-family: "post no bills colombo";
+  font-size: 2rem;
   font-weight: 700;
   height: 3.8rem;
   letter-spacing: .1rem;
@@ -74,9 +78,10 @@ input[type='reset']:focus,
 input[type='reset']:hover,
 input[type='submit']:focus,
 input[type='submit']:hover {
-  background-color: #606c76;
-  border-color: #606c76;
-  color: #fff;
+  background-color: #FFFAF2;
+  opacity: 0.7;
+  border-color: #FFFAF2;
+  color: #352a55;
   outline: 0
 }
 
@@ -225,14 +230,16 @@ input:not([type]),
 textarea,
 select {
   -webkit-appearance: none;
-  background-color: transparent;
-  border: 0.1rem solid #d1d1d1;
-  border-radius: .4rem;
+  background-color: #FFFAF2;
+  opacity: 0.7;
+  font-family: "post no bills colombo";
+  font-size: 2rem;
+  font-weight: 700;
   box-shadow: none;
   box-sizing: inherit;
+  margin: 1%;
   height: 3.8rem;
-  padding: .6rem 1.0rem .7rem;
-  width: 100%
+  width: 23%
 }
 
 input[type='color']:focus,
@@ -251,7 +258,8 @@ input[type='week']:focus,
 input:not([type]):focus,
 textarea:focus,
 select:focus {
-  border-color: #0069d9;
+  background-color: #FCE6F1;
+  opacity: 0.7;
   outline: 0
 }
 
@@ -818,9 +826,9 @@ header nav a {
 }
 
 .furniture.key {
-  top: 68%;
-  right: 62%;
-  width: 6%;
+  top: 64%;
+  left: 34%;
+  width: 12%;
   rotate: 50deg;
 }
 
@@ -859,7 +867,7 @@ header nav a {
 
 .furniture.closet {
   left: 15%;
-  bottom: 0%;
+  bottom: -3.8%;
   width: 35%;
 }
 
@@ -938,17 +946,35 @@ header nav a {
   position: absolute;
   bottom: 15%;
   width: 65%;
-  margin-left: 20%;
+  margin-left: 17.5%;
+}
+
+.numberBox {
+  position: absolute;
+  width: 48%;
+  margin-left: 26%;
+  margin-top: 19%
+}
+
+.numberEntries {
+  display: flex;
+  justify-content: center;
 }
 
 .numberCode {
-  margin: 0 0.5rem;
+  background-color: #FFFAF2;
+  color: #352a55;
   padding: 0.5rem;
-  border: 1px solid #333;
-  width: 20%;
+  border: 0px solid #352a55;
+  width: 1%;
   height: 20%;
   text-align: center;
   font-size: 3rem;
+}
+
+.submit {
+  margin-top: 12%;
+  width: 100%
 }
 
 .window.closet {
@@ -963,23 +989,19 @@ header nav a {
   margin-left: 5%;
 }
 
-.safe {
-  position: absolute;
+.furniture.safe {
   width: 20%;
-  bottom: 18%;
+  bottom: 14.4%;
   margin-left: 30%;
 }
 
-.safeOpen {
-  position: absolute;
-  width: 30%;
-  bottom: 18%;
+.furniture.safeOpen {
+  width: 33%;
+  bottom: 9%;
   margin-left: 30%;
 }
 
-
-.books {
-  position: absolute;
+.furniture.books {
   width: 20%;
   bottom: 18%;
   margin-left: 50%;
@@ -994,7 +1016,63 @@ header nav a {
   max-width: 90%;
 }
 
+/* victory screen */
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
 .window.victory {
-  background-image: linear-gradient(#0188a5, #3e3264);
+  background-image: linear-gradient(#FFD080, #FE546F);
   background-repeat: no-repeat;
+}
+
+.defeat {
+  width: 100%;
+  height: 100%
+}
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+svg {
+    width: 100%;
+    height: 100%;
+    display: block;
+    font: 5.5em 'Montserrat';
+    margin: auto;
+}
+
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 6% 29%;
+    stroke-width: 2px;
+    stroke-dashoffset: 0%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text-copy:nth-child(1){
+  stroke: #352a55;
+  animation-delay: -1;
+}
+
+.text-copy:nth-child(2){
+  stroke: #3e3264;
+  animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+  stroke: #0188a5;
+  animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+  stroke: #01cbcf;
+  animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+  stroke: #0bffe6;
+  animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+  100% {stroke-dashoffset: -35%;}
 }
