--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -12,7 +12,47 @@
   box-sizing: inherit
 }
 
-@font-face{font-family:post no bills colombo;font-style:normal;font-weight:400;src:local('Post No Bills Colombo'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Regular.woff) format('woff')}@font-face{font-family:post no bills colombo;font-style:normal;font-weight:700;src:local('Post No Bills Colombo'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Bold.woff) format('woff')}@font-face{font-family:post no bills colombo light;font-style:normal;font-weight:300;src:local('Post No Bills Colombo Light'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Light.woff) format('woff')}@font-face{font-family:post no bills colombo medium;font-style:normal;font-weight:500;src:local('Post No Bills Colombo Medium'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Medium.woff) format('woff')}@font-face{font-family:post no bills colombo semibold;font-style:normal;font-weight:600;src:local('Post No Bills Colombo SemiBold'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-SemiBold.woff) format('woff')}@font-face{font-family:post no bills colombo extrabold;font-style:normal;font-weight:800;src:local('Post No Bills Colombo ExtraBold'),url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-ExtraBold.woff) format('woff')}
+@font-face {
+  font-family: post no bills colombo;
+  font-style: normal;
+  font-weight: 400;
+  src: local('Post No Bills Colombo'), url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Regular.woff) format('woff')
+}
+
+@font-face {
+  font-family: post no bills colombo;
+  font-style: normal;
+  font-weight: 700;
+  src: local('Post No Bills Colombo'), url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Bold.woff) format('woff')
+}
+
+@font-face {
+  font-family: post no bills colombo light;
+  font-style: normal;
+  font-weight: 300;
+  src: local('Post No Bills Colombo Light'), url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Light.woff) format('woff')
+}
+
+@font-face {
+  font-family: post no bills colombo medium;
+  font-style: normal;
+  font-weight: 500;
+  src: local('Post No Bills Colombo Medium'), url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-Medium.woff) format('woff')
+}
+
+@font-face {
+  font-family: post no bills colombo semibold;
+  font-style: normal;
+  font-weight: 600;
+  src: local('Post No Bills Colombo SemiBold'), url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-SemiBold.woff) format('woff')
+}
+
+@font-face {
+  font-family: post no bills colombo extrabold;
+  font-style: normal;
+  font-weight: 800;
+  src: local('Post No Bills Colombo ExtraBold'), url(https://fonts.cdnfonts.com/s/15907/PostNoBillsColombo-ExtraBold.woff) format('woff')
+}
 
 html {
   box-sizing: border-box;
@@ -604,7 +644,8 @@ h6 {
   font-weight: 300;
   letter-spacing: -.1rem;
   margin-bottom: 2.0rem;
-  margin-top: 0
+  margin-top: 0;
+  font-family: "post no bills colombo"
 }
 
 h1 {
@@ -1032,47 +1073,49 @@ header nav a {
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 svg {
-    width: 100%;
-    height: 100%;
-    display: block;
-    font: 5.5em 'Montserrat';
-    margin: auto;
+  width: 100%;
+  height: 100%;
+  display: block;
+  font: 5.5em 'Montserrat';
+  margin: auto;
 }
 
 .text-copy {
-    fill: none;
-    stroke: white;
-    stroke-dasharray: 6% 29%;
-    stroke-width: 2px;
-    stroke-dashoffset: 0%;
-    animation: stroke-offset 5.5s infinite linear;
+  fill: none;
+  stroke: white;
+  stroke-dasharray: 6% 29%;
+  stroke-width: 2px;
+  stroke-dashoffset: 0%;
+  animation: stroke-offset 5.5s infinite linear;
 }
 
-.text-copy:nth-child(1){
+.text-copy:nth-child(1) {
   stroke: #352a55;
   animation-delay: -1;
 }
 
-.text-copy:nth-child(2){
+.text-copy:nth-child(2) {
   stroke: #3e3264;
   animation-delay: -2s;
 }
 
-.text-copy:nth-child(3){
+.text-copy:nth-child(3) {
   stroke: #0188a5;
   animation-delay: -3s;
 }
 
-.text-copy:nth-child(4){
+.text-copy:nth-child(4) {
   stroke: #01cbcf;
   animation-delay: -4s;
 }
 
-.text-copy:nth-child(5){
+.text-copy:nth-child(5) {
   stroke: #0bffe6;
   animation-delay: -5s;
 }
 
-@keyframes stroke-offset{
-  100% {stroke-dashoffset: -35%;}
+@keyframes stroke-offset {
+  100% {
+    stroke-dashoffset: -35%;
+  }
 }
