improved win message

--- a/lib/escaperoom_web/live/item_live/index.html.heex
+++ b/lib/escaperoom_web/live/item_live/index.html.heex
@@ -6,11 +6,11 @@
       <div class="defeat">
         <svg>
           <symbol id="s-text">
-            <text text-anchor="middle" x="50%" y="40%">YOU</text>
-            <text text-anchor="middle" x="51%" y="40%">YOU</text>
+            <text text-anchor="middle" x="50%" y="40%">FREEDOM,</text>
+            <text text-anchor="middle" x="51%" y="40%">FREEDOM,</text>
 
-            <text text-anchor="middle" x="50%" y="70%">DEFEATED.</text>
-            <text text-anchor="middle" x="51%" y="70%">DEFEATED.</text>
+            <text text-anchor="middle" x="50%" y="70%">BABY.</text>
+            <text text-anchor="middle" x="51%" y="70%">BABY.</text>
 
           </symbol>
 
