added authors to interface

--- a/lib/escaperoom_web/templates/layout/root.html.heex
+++ b/lib/escaperoom_web/templates/layout/root.html.heex
@@ -13,6 +13,8 @@
   <body>
     <header>
     <h1>The big escape</h1>
+    <h6> by Corentin Frey & Leyla Kandé</h6>
+
       <section class="container">
       <!--
         <nav>
